# cs3100_final

./: .env  pyproject.toml
app/: main.py
app/models/: auth.py
app/routes/: auth.py
app/services/: auth.py
app/tests/: test_auth.py  test_environment.py
app/utils/: environment.py  generators.py  log.py
logs/: log.txt
