[tool.poetry]
name = "cs3100-final"
version = "0.1.0"
description = ""
authors = ["Treysen-Zobell <36913811+Treysen-Zobell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
